# DeleteThisProject

./: .gitignore  CMakeLists.txt
.github/: copilot-instructions.md
main/: CMakeLists.txt  my_utils.h  oneshot_read_main.c  oneshot_read_main.cpp  plan.txt  settings.h
